<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new"
        android:title="@string/breakdown_new_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_template"
        android:title="@string/breakdown_template_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import"
        android:title="@string/import_str"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export"
        android:title="@string/breakdown_export_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_ai_config"
        android:title="@string/breakdown_ai_config_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_trash"
        android:title="@string/breakdown_trash_menu"
        app:showAsAction="never" />
</menu>