<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_import_material"
        android:title="@string/import_str"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import_bookmark"
        android:title="@string/material_import_bookmark"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_material"
        android:title="@string/export"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_material_trash"
        android:title="@string/material_trash"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_material_tag_manage"
        android:title="@string/material_tag_manage"
        app:showAsAction="never" />

</menu>
