<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new_conv"
        android:title="@string/ai_agent_new_conv"
        app:icon="@drawable/ic_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_skill_manage"
        android:title="@string/ai_agent_skill_manage_title"
        app:icon="@drawable/ic_code"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_clear_conv"
        android:title="@string/ai_agent_clear_conv"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_delete_conv"
        android:title="@string/ai_agent_delete_conv"
        app:showAsAction="never" />
</menu>
